CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RecastNavigation)
#SET(RECAST_VERSION r129)

IF(NOT CMAKE_BUILD_TYPE)
#	SET(CMAKE_BUILD_TYPE "Debug")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(MSVC)
	OPTION(USE_MSVC_FAST_FLOATINGPOINT "Use MSVC /fp:fast option" ON)
	IF(USE_MSVC_FAST_FLOATINGPOINT)
		ADD_DEFINITIONS(/fp:fast)
	ENDIF(USE_MSVC_FAST_FLOATINGPOINT)
ENDIF(MSVC)

IF(WIN32)
	OPTION(INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES "Create MSVC projectfiles that can be distributed" OFF)

	IF(INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RecastNavigation_SOURCE_DIR})
		SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${RecastNavigation_SOURCE_DIR})
		SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${RecastNavigation_SOURCE_DIR})
		SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${RecastNavigation_SOURCE_DIR})
		SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RecastNavigation_SOURCE_DIR})
	ENDIF(INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)

	OPTION(INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES "Create MSVC projectfiles with relative paths" OFF)
	#OPTION(INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES "Add MSVC postfix for executable names (_Debug)" OFF)
		
	IF(INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES)
		SET(CMAKE_SUPPRESS_REGENERATION  1)
		SET(CMAKE_USE_RELATIVE_PATHS 1)
	ENDIF(INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES)

	ADD_DEFINITIONS(/D _CRT_SECURE_NO_WARNINGS)
ENDIF(WIN32)

ADD_SUBDIRECTORY(DebugUtils)
ADD_SUBDIRECTORY(Detour)
ADD_SUBDIRECTORY(Recast)
ADD_SUBDIRECTORY(RecastDemo)
